issues covers now displayed in bounding box

--- a/longboxed/frontend/static/less/theme.less
+++ b/longboxed/frontend/static/less/theme.less
@@ -161,3 +161,19 @@
         font-size: 16px;
     }
 }
+
+.cover-square {
+    background-color: #2f2f2f;
+    height:150px;
+    width:150px;
+    padding-top:25px;
+}
+.on-pull-list {
+    background-color: #ffff00;
+}
+
+.cover-in-square {
+    // background-color: #ffffff;
+    width: 100px;
+    margin: 0 auto;
+}
